--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -11,27 +11,27 @@
      </div>
       <tbody>
         <tr>
-          <td class="table-success border-light">氏名</td>
+          <td class="table-success border-light"><strong>氏名</strong></td>
           <td><%= @customer.first_name %><%= @customer.last_name %></td>
         </tr>
         <tr>
-          <td class="table-success border-light">フリガナ</td>
+          <td class="table-success border-light"><strong>フリガナ</strong></td>
           <td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td>
         </tr>
         <tr>
-          <td class="table-success border-light">郵便番号</td>
+          <td class="table-success border-light"><strong>郵便番号</strong></td>
           <td><%= @customer.post_code %></td>
         </tr>
         <tr>
-          <td class="table-success border-light">住所</td>
+          <td class="table-success border-light"><strong>住所</strong></td>
           <td><%= @customer.address %></td>
         </tr>
         <tr>
-          <td class="table-success border-light">電話番号</td>
+          <td class="table-success border-light"><strong>電話番号</strong></td>
           <td><%= @customer.telephone_number %></td>
         </tr>
         <tr>
-          <td class="table-success border-light">メールアドレス</td>
+          <td class="table-success border-light"><strong>メールアドレス</strong></td>
           <td><%= @customer.email %></td>
         </tr>
       </tbody>
