--- a/app/views/public/ships/index.html.erb
+++ b/app/views/public/ships/index.html.erb
@@ -21,15 +21,13 @@
         <%= f.submit "新規登録" ,class: "btn  btn-success" %>
        </div>
        <% end %>
-
-
 <% @ships.each do |ship| %>
  <table class="table table-bordered">
   <thead>
   <tr class="table-success">
-   <th><strong>郵便番号</strong></th>
-   <th><strong>住所</strong></th>
-   <th><strong>宛名</strong></th>
+   <th>郵便番号</th>
+   <th>住所</th>
+   <th>宛名</th>
    <th></th>
   </tr>
   </thead>
