layout admin/order

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -25,7 +25,7 @@
          <% end %>
         </td>
         <td>
-         <%= item.price %>
+         &yen;<%= item.price %>
         </td>
         <td>
          <%= item.genre.name %>
