--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
-  新規会員登録
+  <h1>新規会員登録</h1>
 </div>
 <div class='container'>
   <div class='row g-3'>
