--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -47,7 +47,7 @@
       </table>
       <div class="text-right">
         <%= link_to '編集', "/admin/customers/#{@customer.id}/edit", class: "btn btn-sm btn-success" %>
-        <%= link_to '注文履歴一覧を見る', "/", class: "btn btn-sm btn-primary" %>
+        <%= link_to '注文履歴一覧を見る', "/admin", class: "btn btn-sm btn-primary" %>
       </div>
     </div>
   </div>
