--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -14,7 +14,7 @@
     </thead>
 
     <tbody>
-      <% genres.each do |item| %>
+      <% @items.each do |item| %>
       <tr>
         <td>
          <%= item.id %>
