--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="col-md-2 offset-me-5">
       <%= link_to public_destroy_all_path, method: :delete do %>
-        カートをからにする
+        カートを空にする
       <% end %>
     </div>
   </div>
