--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -51,7 +51,7 @@
 
   <div class="row">
     <storng><h5>支払い方法</h5></storng>
-    <%= @order.payment_method%>
+    <%= @order.payment_method_i18n %>
   </div>
 
   <div class="row">
