--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,39 +4,48 @@
 <div class="container">
   <div class="row g-3">
     <div class ="col-md-6 offset-md-3">
-        <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
+    <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
+      <table class="table text-left table-borderless">
+        <tboby>
+          <tr>
+            <th>商品画像</th>
+            <td><%= f.file_field :image, accept: "image/*" %></td>
+          </tr>
+          <tr>
+            <th>商品名</th>
+            <td><%= f.text_field :name %></td>
+          </tr>
+          <tr>
+            <th>商品説明</th>
+            <td><%= f.text_area :introduction %></td>
+          </tr>
+          <tr>
+            <th>ジャンル</th>
+            <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), inclide_blank: '選択してください' %></td>
+          </tr>
+          <tr>
+            <th>税抜価格</th>
+            <td>&yen;<%= f.text_field :price %></td>
+          </tr>
+          <tr>
+            <th>販売ステータス</th>
+            <td>
+              <%= f.radio_button :is_active, :true %>
+              <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
+              <%= f.radio_button :is_active, :false %>
+              <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
-        <div>
-          <%= f.label '商品画像' %>
-          <%= f.file_field :image, accept: "image/*" %>
-        </div>
-        <div>
-          <%= f.label '商品名' %>
-          <%= f.text_field :name %>
-        </div>
-        <div>
-          <%= f.label '商品説明' %>
-          <%= f.text_area :introduction %>
-        </div>
-        <div>
-          <%= f.label 'ジャンル' %>
-            <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), inclide_blank: '選択してください' %>
-        </div>
-        <div>
-          <%= f.label '税抜価格' %>
-          <%= f.text_field :price %>円
-        </div>
-        <div>
-          <%= f.label '販売ステータス' %>
-            <%= f.radio_button :is_active, :true %>
-            <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
-            <%= f.radio_button :is_active, :false %>
-            <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
-        </div>
-        <%= f.submit '新規登録', class: 'btn btn-sm btn-success' %>
-
-      <% end %>
+  <div class = "row g-3">
+    <div class = "col-md-9 offset-md-5">
+      <%= f.submit '新規登録', class: 'btn btn-success btn-lg' %>
+      </buttom>
     </div>
   </div>
+  <% end %>
 </div>
 
