--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class='container'>
   <div class="row g-3">
-    <div class='col'>
+    <div class='col-md-6'>
 
       <table class="table text-left table-borderless">
         <tboby>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="col-md-3 offset-me-1">
-      <table class="table table-borderless">
+      <table class="table table-bordered">
         <tbody>
           <tr>
             <th scope="col">商品合計</th>
