--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -9,7 +9,7 @@
     <div class="col-md-6">
       <span style="font-weight: bold">注文情報</span>
       <table class="table table-bordered">
-          <tr><th class="table-active">注文日</th><td><%= @order.created_at %></td></tr>
+          <tr><th class="table-active">注文日</th><td><%= @order.created_at.to_date %></td></tr>
           <tr>
             <th class="table-active">配送先</th>
             <td>
@@ -18,8 +18,8 @@
               <%= @order.name %>
             </td>
           </tr>
-          <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method %></td></tr>
-          <tr><th class="table-active">ステータス</th><td><%= @order.status %></td></tr>
+          <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method_i18n %></td></tr>
+          <tr><th class="table-active">ステータス</th><td><%= @order.status_i18n %></td></tr>
       </table>
     </div>
 
@@ -30,15 +30,15 @@
         <tr>
           <th class="table-active">商品合計</th>
           <% @order_subtotol = @order.total_payment - @order.shipping_cost %>
-          <td><%= @order_subtotol %></td>
+          <td>&yen;<%= @order_subtotol %></td>
         </tr>
         <tr>
           <th class="table-active">配送料</th>
-          <td><%= @order.shipping_cost %></td>
+          <td>&yen;<%= @order.shipping_cost %></td>
         </tr>
         <tr>
           <th class="table-active">ご請求額</th>
-          <td><%= @order.total_payment %></td>
+          <td>&yen;<%= @order.total_payment %></td>
         </tr>
       </table>
     </div>
@@ -64,10 +64,10 @@
           <tr>
             <td><%= order_detail.item.name %></td>
             <!--itemモデル記載の税込みを求めるためのメソッドを使用-->
-            <td><%= order_detail.item.with_tax_price %></td>
+            <td>&yen;<%= order_detail.item.with_tax_price %></td>
             <td><%= order_detail.amount %></td>
             <!--order_detailモデル記載の小計を求めるためのメソッドを使用-->
-            <td><%= order_detail.subtotal %></td>
+            <td>&yen;<%= order_detail.subtotal %></td>
           </tr>
         </tbody>
         <% end %>
