--- a/app/views/public/ships/edit.html.erb
+++ b/app/views/public/ships/edit.html.erb
@@ -5,7 +5,7 @@
   <div class='row g-3'>
     <div class='col-md-6 offset-md-3'>
 
-   <%= form_with model: @ship,url: '/public/ships', method: :patch  do |f| %>
+   <%= form_with model: @ship, url: public_ship_path(@ship.id), method: :patch do |f| %>
     <div class="col-md-6">
      <strong>郵便番号(ハイフンなし)</strong>
       <%= f.text_field :post_code, class: 'form-control border-success' %>
