--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,5 +1,5 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
-    <h1>マイページ</h1>
+    マイページ
 </div>
 <div class='container'>
   <div class='row g-3'>
