--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,5 +1,5 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
-    <h1>配送先登録/一覧</h1>
+    購入履歴一覧
      </div>
       <div class="col-md-10 offset-md-1">
        <div class="row g-3">
