--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,107 +1,82 @@
-<div class="container">
-
-  <div class="row">
-    <div class="col-md-3 offset-md-2">
-      <h2>ショッピングカート</h2>
+<div class="container text-center">
+  <div class="row justify-content-between">
+    <div class="col-4">
+      <strong class="h4 text-secondary">ショッピングカート</strong>
     </div>
-    <div class="col-md-2 offset-me-5">
+    <div class="col-4">
       <%= link_to public_destroy_all_path, method: :delete do %>
-        カートをからにする
+        <button type="button" class="btn btn-danger">カートを空にする</button>
       <% end %>
     </div>
   </div>
-
-  <div class=row>
-    <div class="col-md-10">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>商品名</th>
-            <th>単価(税込み)</th>
-            <th>数量</th>
-            <th>小計</th>
-          </tr>
-        </thead>
-        <% @cart_items.each do |cart_item| %>
-        <tbody>
-          <tr>
-
-            <td>
-              <%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %>
-            </td>
-            <td>
-               <!--税込表示をするためのメソッド(モデルに定義したもの)-->
-              &yen;<%= cart_item.item.with_tax_price %>
-            </td>
-            <td>
-              <%= cart_item.amount %>
-            </td>
-            <td>
-              <!--小計を求めるためのメソッド(モデルに定義したもの)-->
-              &yen;<%= cart_item.subtotal %>
-            </td>
-            <td>
-            <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
-              <%= f.select :amount, *[1..10] %>
-              <%= f.submit '変更' %>
-            <% end %>
-            </td>
-            </div>
-
-
-
-            <td>
-              <%= link_to  public_cart_item_path(cart_item.id), method: :delete do %>
-                <p>削除する</p>
-              <% end %>
-            </td>
-
-          </tr>
-        </tbody>
-        <% end %>
-      </table>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-2 offset-md-3">
+  <!--テーブル-->
+  <table class="table table-bordered">
+    <thead class="table-danger">
+      <tr class="text-light">
+        <th>商品名</th>
+        <th>単価(税込み)</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th></th>
+      </tr>
+    </thead>
+    <% @cart_items.each do |cart_item| %>
+    <tbody>
+      <tr>
+        <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %>
+        <!--税込表示をするためのメソッド(モデルに定義したもの)-->
+        &yen;<%= cart_item.item.with_tax_price %>
+        </td>
+        <td><%= cart_item.amount %></td>
+        <!--小計を求めるためのメソッド(モデルに定義したもの)-->
+        <td>&yen;<%= cart_item.subtotal %></td>
+        <td>
+          <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
+          <%= f.select :amount, *[1..10] %>
+          <%= f.submit '変更',class:"btn btn-success"%>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to  public_cart_item_path(cart_item.id), method: :delete do %>
+          <button type="button" class="btn btn-danger">削除する</button>
+          <% end %>
+        </td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+  <div class="row justify-content-between">
+    <div class="col-4">
       <%= link_to root_path do %>
-        <p>買い物を続ける</p>
+        <button type="button" class="btn btn-primary">買い物を続ける</button>
       <% end %>
     </div>
-    <div class="col-md-2 offset-md-5">
-      <table>
-        <tbody>
-          <tr>
-            <td>合計金額</td>
-            <!--合計金額の計算-->
-            <% @cart_items.each do |cart_item| %>
-              <% @total += cart_item.subtotal %>
-            <% end %>
-            <td>&yen;<%= @total %></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-4">
+      <!--小テーブル-->
+  <table class="table table-bordered">
+    <tbody>
+      <tr>
+        <th class="table-danger text-light">合計金額</th>
+        <td colspan="2" >
+          <!--合計金額の計算-->
+          <% @cart_items.each do |cart_item| %>
+            <% @total += cart_item.subtotal %>
+          <% end %>
+          &yen;<%= @total %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
     </div>
   </div>
-
-   <div class=row>
-    <div class="col-md-12 text-center">
+    <div class="row align-items-end">
+    <div class="col">
       <% if @cart_items.present? %>
         <%= link_to new_public_order_path do %>
-          <p>情報入力に進む</p>
+         <button type="button" class="btn btn-success">情報入力に進む</button>
         <% end %>
       <% end %>
-
-      <!--試し実験 -->
-        <% @cart_items.each do |cart_item| %>
-          <%= cart_item.item_id %> <p>id</p>
-          <%= cart_item.amount %> <p>amount</p>
-          <%= cart_item.item.price %> <p>price</p>
-        <% end %>
-      <!-- 済んだら消す-->
-
+    </div>
     </div>
   </div>
-
 </div>
