--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,14 +1,15 @@
 <div class="container text-center">
   <div class="row justify-content-between">
-    <div class="col-4">
+    <div class="col-mb-4">
       <strong class="h4 text-secondary">ショッピングカート</strong>
     </div>
-    <div class="col-4">
+    <div class="col-mb-4">
       <%= link_to public_destroy_all_path, method: :delete do %>
         <button type="button" class="btn btn-danger">カートを空にする</button>
       <% end %>
     </div>
   </div>
+  <br>
   <!--テーブル-->
   <table class="table table-bordered">
     <thead class="table-danger">
