--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,43 +2,50 @@
   商品編集
 </div>
 <div class="container">
+<%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
   <div class="row g-3">
     <div class ="col-md-7 offset-md-3">
-        <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
-
-        <div>
-          <%= f.label '商品画像' %>
-          <%= f.file_field :image, accept: "image/*" %>
-        </div>
-        <div>
-          <%= f.label '商品名' %>
-          <%= f.text_field :name %>
-        </div>
-        <div>
-          <%= f.label '商品説明' %>
-          <%= f.text_area :introduction %>
-        </div>
-        <div>
-          <%= f.label 'ジャンル' %>
-          <%= f.text_field :genre_id %>
-        </div>
-        <div>
-          <%= f.label '税抜価格' %>
-          <%= f.text_field :price %>円
-        </div>
-        <div>
-          <%= f.label '販売ステータス' %>
-            <%= f.radio_button :is_active, :true %>
-            <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
-            <%= f.radio_button :is_active, :false %>
-            <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
-        </div>
-
-
-        <%= f.submit '変更を保存', class: 'btn btn-sm btn-success' %>
-
-      <% end %>
+      <table class="table text-left table-borderless">
+        <tbody>
+          <tr>
+            <th>商品画像</th>
+            <td><%= f.file_field :image, accept: "image/*" %></td>
+          </tr>
+          <tr>
+            <th>商品名</th>
+            <td><%= f.text_field :name %></td>
+          </tr>
+          <tr>
+            <th>商品説明</th>
+            <td><%= f.text_area :introduction %></td>
+          </tr>
+          <tr>
+            <th>ジャンル</th>
+            <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), inclide_blank: '選択してください' %></td>
+          </tr>
+          <tr>
+            <th>税抜価格</th>
+            <td>&yen;<%= f.text_field :price %></td>
+          </tr>
+          <tr>
+            <th>販売ステータス</th>
+            <td>
+              <%= f.radio_button :is_active, :true %>
+              <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
+              <%= f.radio_button :is_active, :false %>
+              <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
-</div>
 
+  <div class = "row g-3">
+    <div class ="col-md-9 offset-md-5">
+    <%= f.submit '変更する', class: 'btn btn-success' %>
+    <%= link_to '戻る', admin_item_path(@item.id), class: 'btn btn-outline-success' %>
+    </div>
+  </div>
+  <% end %>
+</div>
