--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -2,9 +2,9 @@
   商品新規登録
 </div>
 <div class="container">
+<%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
   <div class="row g-3">
     <div class ="col-md-6 offset-md-3">
-    <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
       <table class="table text-left table-borderless">
         <tboby>
           <tr>
@@ -42,8 +42,8 @@
 
   <div class = "row g-3">
     <div class = "col-md-9 offset-md-5">
-      <%= f.submit '新規登録', class: 'btn btn-success btn-lg' %>
-      </buttom>
+      <%= f.submit '新規登録', class: 'btn btn-success' %>
+      <%= link_to '戻る', admin_items_path, class: 'btn btn-outline-success' %>
     </div>
   </div>
   <% end %>
