--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -16,9 +16,9 @@
         <tbody>
           <% @customers.each do |customer| %>
             <tr>
-              <th scope="row">1</th>
+              <th><%= customer.id %></th>
               <td><%= link_to "/admin/customers/#{customer.id}" do %>
-              <%= customer.first_name %><%= customer.last_name %>
+                <%= customer.first_name %><%= customer.last_name %>
               <% end %>
               </td>
               <td><%= customer.email %></td>
