--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -12,8 +12,8 @@
   <br>
   <!--テーブル-->
   <table class="table table-bordered">
-    <thead class="table-danger">
-      <tr class="text-light">
+    <thead class="table-success">
+      <tr>
         <th>商品名</th>
         <th>単価(税込み)</th>
         <th>数量</th>
@@ -24,19 +24,18 @@
     <% @cart_items.each do |cart_item| %>
     <tbody>
       <tr>
-        <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %>
+        <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %></td>
         <!--税込表示をするためのメソッド(モデルに定義したもの)-->
-        &yen;<%= cart_item.item.with_tax_price %>
-        </td>
-        <td><%= cart_item.amount %></td>
-        <!--小計を求めるためのメソッド(モデルに定義したもの)-->
-        <td>&yen;<%= cart_item.subtotal %></td>
-        <td>
+        <td class = "align-middle">&yen;<%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
+         <td class = "align-middle">
           <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
           <%= f.select :amount, *[1..10] %>
           <%= f.submit '変更',class:"btn btn-success"%>
           <% end %>
         </td>
+        <!--小計を求めるためのメソッド(モデルに定義したもの)-->
+        <td class = "align-middle">&yen;<%= cart_item.subtotal.to_s(:delimited) %></td>
+
         <td>
           <%= link_to  public_cart_item_path(cart_item.id), method: :delete do %>
           <button type="button" class="btn btn-danger">削除する</button>
@@ -57,13 +56,13 @@
   <table class="table table-bordered">
     <tbody>
       <tr>
-        <th class="table-danger text-light">合計金額</th>
+        <th class="table-success">合計金額</th>
         <td colspan="2" >
           <!--合計金額の計算-->
           <% @cart_items.each do |cart_item| %>
             <% @total += cart_item.subtotal %>
           <% end %>
-          &yen;<%= @total %>
+          &yen;<%= @total.to_s(:delimited) %>
         </td>
       </tr>
     </tbody>
