--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -30,7 +30,7 @@
         <tr>
           <th class="table-active">商品合計</th>
           <% @order_subtotol = @order.total_payment - @order.shipping_cost %>
-          <td>&yen;<%= @order_subtotol %></td>
+          <td>&yen;<%= @order_subtotol.to_s(:delimited) %></td>
         </tr>
         <tr>
           <th class="table-active">配送料</th>
@@ -38,7 +38,7 @@
         </tr>
         <tr>
           <th class="table-active">ご請求額</th>
-          <td>&yen;<%= @order.total_payment %></td>
+          <td>&yen;<%= @order.total_payment.to_s(:delimited) %></td>
         </tr>
       </table>
     </div>
