--- a/app/views/public/ships/edit.html.erb
+++ b/app/views/public/ships/edit.html.erb
@@ -18,7 +18,7 @@
            <strong>宛名</strong>
          <%= f.text_field :name, class: 'form-control border-success' %>
         </div>
-        <div class="col-md">
-        <%= f.submit "変更内容を保存" ,class: "btn  btn-success" %>
+        <div class="col-md ">
+        <%= f.submit "変更内容を保存" ,class: "btn  btn-success mt-3" %>
        </div>
        <% end %>
