--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,8 +2,9 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
     注文情報入力
 </div>
-
-
+<div class='container'>
+  <div class='row g-3'>
+    <div class='col-md-7 offset-md-2'>
   <h3><strong>支払い方法</strong></h3>
   <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
   <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
@@ -20,26 +21,34 @@
   <%= current_customer.first_name + current_customer.last_name%>
   <br>
 <!--登録済住所から選択-->
+ <div class="mt-3">
   <%= radio_button_tag("address_option", "1") %>
-  <%= label_tag(:ship_address, "登録済住所から選択") %><br>
+  <%= label_tag(:ship_address, "登録済住所から選択") %>
+  </div>
    <div class="form-select">
   <%= f.select :ship_id, options_from_collection_for_select(Ship.all, :id, :ship_display)  %>
   </div>
 <!--新しいお届け先-->
+<div class="mt-3">
   <%= radio_button_tag("address_option", "2") %>
-  <%= label_tag(:ship_address, "新しいお届け先") %><br>
+  <%= label_tag(:ship_address, "新しいお届け先") %>
+  </div>
   <div class="col-md-6">
-  <%= f.label :post_code,"郵便番号（ハイフンなし）" %>
+  <strong>郵便番号(ハイフンなし)</strong>
    <%= f.text_field :post_code, class: 'form-control border-success' %>
   </div>
-<div class="col-md-6">
-  <%= f.label :ship_address,"住所" %>
+<div class="col-md-12">
+  <strong>住所</strong>
   <%= f.text_field :ship_address , class: 'form-control border-success' %>
   </div>
   <div class="col-md-6">
-  <%= f.label :name,"宛名" %><br>
+    <strong>宛名</strong>
   <%= f.text_field :name, class: 'form-control border-success' %>
   </div>
-
-  <%= f.submit '確認画面へ進む', class: "btn btn-sm btn-primary" %>
+<div class="d-grid gap-2 col-6 mt-3  mx-auto">
+  <%= f.submit '確認画面へ進む', class: "btn btn btn-primary" %>
+  </div>
 <% end %>
+</div>
+</div>
+</div>
