--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,18 +2,16 @@
   <h1>新規会員登録</h1>
 </div>
 <div class='container'>
-  <div class='row g-3'>
+  <div class='row'>
     <div class='col-md-6 offset-md-3'>
 　　　<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   　　　　<%= render "public/shared/error_messages", resource: resource %>
-
-      <div class="col-md-6">
-        名前
+      <div class="col-6">
         (姓)
         <%= f.text_field :first_name, autocomplete: "first_name" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-6">
         (名)
         <%= f.text_field :last_name, autocomplete: "last_name" ,class: 'form-control border-success' %>
       </div>
@@ -61,7 +59,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="actions">
+      <div>
         <%= f.submit "登録" ,class: "btn btn-success" %>
       </div>
     <% end %>
