--- a/app/views/public/ships/index.html.erb
+++ b/app/views/public/ships/index.html.erb
@@ -1,9 +1,9 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
-    <h1>配送先登録/一覧</h1>
+    配送先登録/一覧
 </div>
 <div class='container'>
   <div class='row g-3'>
-    <div class='col-md-6 offset-md-3'>
+    <div class='col-md-7 offset-md-2'>
     <%= form_with model: @ship, url: public_ships_path, method: :post do |f| %>
      <div class="col-md-6">
      <strong>郵便番号(ハイフンなし)</strong>
@@ -17,7 +17,7 @@
            <strong>宛名</strong>
          <%= f.text_field :name, class: 'form-control border-success' %>
         </div>
-        <div class="d-md-flex justify-content-md-end">
+        <div class="d-md-flex justify-content-md-end mb-3 ">
         <%= f.submit "新規登録" ,class: "btn  btn-success" %>
        </div>
        <% end %>
