--- a/app/views/admin/order_details/_show.html.erb
+++ b/app/views/admin/order_details/_show.html.erb
@@ -1,4 +1,4 @@
-<table class="table text-center">
+<table class="table text-center table-bordered">
   <thead class="table-success">
     <tr>
       <th scope="col">商品名</th>
