--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,54 +1,47 @@
 <div class="h3 pb-2 mb-4 text-success border-bottom border-success">
 商品一覧
 </div>
-<div class='container'>
-  <div class= "row　g-3">
-   <div class='col'>
-    <table class="table text-center">
-      <thead class="table-success">
-        <tr>
-          <th scope="col">商品ID</th>
-          <th scope="col">商品名</th>
-          <th scope="col">税抜価格</th>
-          <th scope="col">ジャンル</th>
-          <th scope="col">ステータス</th>
-         </tr>
-       </thead>
 
-       <tbody>
-         <% @items.each do |item| %>
-         <tr>
-           <td>
-            <%= item.id %>
-           </td>
-           <td>
-            <%= link_to admin_item_path(item.id) do %>
-             <%= item.name %>
-            <% end %>
-           </td>
-           <td>
-            &yen;<%= item.price %>
-           </td>
-           <td>
-            <%= item.genre.name %>
-           </td>
-           <td>
-            <% if item.is_active %>
-             <%=  "販売中" %>
-            <% else %>
-             <%= "販売停止中" %>
-            <% end %>
-           </td>
-         </tr>
+ <table>
+   <thead>
+     <tr>
+       <th>商品ID</th>
+       <th>商品名</th>
+       <th>税抜価格</th>
+       <th>ジャンル</th>
+       <th>ステータス</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @items.each do |item| %>
+      <tr>
+        <td>
+         <%= item.id %>
+        </td>
+        <td>
+         <%= link_to admin_item_path(item.id) do %>
+          <%= item.name %>
          <% end %>
-       </tbody>
-     </table>
-  </div>
- </div>
+        </td>
+        <td>
+         &yen;<%= item.price %>
+        </td>
+        <td>
+         <%= item.genre.name %>
+        </td>
+        <td>
+         <% if item.is_active %>
+          <%=  "販売中" %>
+         <% else %>
+          <%= "販売停止中" %>
+         <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 
- <div class='row g-3'>
-  <div class= "col text-right">
-   <%= link_to "追加する", new_admin_item_path, class: 'btn btn-outline-success' %>
+  <div>
+  <%= link_to "新規登録", new_admin_item_path, class: 'btn btn-success' %>
   </div>
- </div>
-</div>
