--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,16 @@
           <li>
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dirk' %>
           </li>
+          <li>
+            <!--検索窓の姿のみ表示-->
+            <div class="input-group">
+              <input type="text" id="txt-search" class="form-control input-group-prepend" placeholder="キーワードを入力"></input>
+              <span class="input-group-btn input-group-append">
+                <submit type="submit" id="btn-search" class="btn btn-primary"><i class="fas fa-search"></i> 検索</submit>
+              </span>
+            </div>
+
+          </li>
 
         <% elsif admin_signed_in? %>
 
