--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,34 +1,32 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-md-12 text-center py-5">
+    <div class="col-md-12 text-center mb-3">
       <h1 class="display-2">
         <strong>About</strong>
       </h1>
     </div>
   </div>
 
-   <div class="row">
-      <div class="col-md-12 text-center mb-5">
-          <h3>
-            <strong>ながのCAKEは全国発送可能なケーキ屋さんです。</br>
-              お子様からお年寄りの方までお召し上がりいただけるよう、</br>
-              様々なバリエーションをご用意しております。</br>
-              また全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
-              ぜひご注文ください</strong>
-          </h3>
+  <div class="row">
+    <div class="col-md-12 text-center mb-2">
+        <h3>
+          <strong>ながのCAKEは全国発送可能なケーキ屋さんです。</br>
+            お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+            様々なバリエーションをご用意しております。</br>
+            また全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
+            ぜひご注文ください</strong>
+        </h3>
+    </div>
+  </div>
 
-      </div>
-   </div>
-
-   <div class="row">
-     <div class="col-md-12 text-center">
-       <!--ここに決まり次第イメージを挿入-->
-       イメージ！
-       <%#= image_tag                  %>
-     </div>
-
-   </div>
-
+  <div class="row">
+    <div class="col-md-12 text-center mt-1 pb-5">
+     <!--ここに決まり次第イメージを挿入-->
+      <% @items.last(1).each do |item| %>
+        <%= image_tag item.image, size: "700x300" %>
+      <% end %>
+    </div>
+  </div>
 
 </div>
