--- a/app/views/public/items/_genres.html.erb
+++ b/app/views/public/items/_genres.html.erb
@@ -1,10 +1,10 @@
-      <div class="card" style="width: 18rem;">
-      <div class="card-header">
+    <div class="card" style="width: 15rem;">
+      <div class="card-header text-center">
         ジャンル検索
       </div>
       <ul class="list-group list-group-flush">
         <% genres.each do |genre| %>
-        <li class="list-group-item"><%= link_to genre.name, public_items_path(genre_id: genre.id) %></li>
+        <li class="list-group-item text-center"><%= link_to genre.name, public_items_path(genre_id: genre.id) %></li>
         <% end %>
       </ul>
-      </div>
+    </div>
