--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,15 +1,15 @@
-<div class="container text-center">
+<div class="container-fluid">
   <div class="row">
 
 
-    <div class="col-md-3">
+    <div class="col-md-3 pl-5">
       <!--ジャンル検索-->
     <%= render 'public/items/genres', genres: @genres %>
     </div>
 
 
-    <div classo="col-md-8 offset-md-1">
-      <h1>
+    <div class="col-md-9 text-left">
+      <h1 class="ml-2 mb-3">
         商品一覧(全<%= Item.count %>)
       </h1>
       <table class="table d-flex flex-wrap">
