--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,35 +1,34 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-
-    <div class="col-md-3">
-      <!--ジャンル検索-->
-    <%= render 'public/items/genres', genres: @genres %>
+    <!--ジャンル検索-->
+    <div class="col-md-3 pl-5">
+      <%= render 'public/items/genres', genres: @genres %>
     </div>
 
 
-    <div class="col-md-8 offset-md-1">
+    <div class="col-md-9">
 
-      <div class="row">
+      <div class="row pr-5">
         <div class="col-md-4">
-          <%= image_tag @item.image, size: "200x200" %>
+          <%= image_tag @item.image, size: "356x220" %>
         </div>
 
-        <div class="col-md-6 offset-md-2">
+        <div class="col-md-7 ml-4 pr-3 d-flex flex-wrap">
           <h1><%= @item.name %></h1>
           <h2><%= @item.introduction %></h2>
           &yen;<%= @item.with_tax_price %><small class="text-muted">(税込)</small>
         </div>
       </div>
 
-
-      <div class="text-right">
+        <!--個数選択-->
         <%= form_with model: @cart_item, url: '/public/cart_items', method: :post do |f| %>
+        <div class="row d-flex">
           <%= f.hidden_field :item_id, :value => @item.id %>
-          <div class="col-md-3 offset-md-6">
+          <div class="col-md-1 offset-md-8">
             <%= f.select :amount, *[1..10] %>
           </div>
-          <div classo="col-md-2 offset-md-1">
-            <%= f.submit 'カートに入れる' %>
+          <div class="col-md-3">
+            <%= f.submit 'カートに入れる', class:'btn btn-success' %>
           </div>
         <% end %>
       </div>
