--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -15,7 +15,7 @@
             お子様からお年寄りの方までお召し上がりいただけるよう、</br>
             様々なバリエーションをご用意しております。</br>
             また全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
-            ぜひご注文ください</strong>
+            ぜひご注文ください。</strong>
         </h3>
     </div>
   </div>
