--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -9,9 +9,15 @@
 
 
     <div classo="col-md-8 offset-md-1">
+
       <h1>
-        商品一覧(全<%= Item.count %>)
+      <% if params[:genre_id] %>
+          <%= @genre.name %>(全<%= @items.count %>
+      <% else %>
+          商品一覧(全<%= Item.count %>)
+      <% end %>
       </h1>
+
       <table class="table d-flex flex-wrap">
         <% @items.each do |item| %>
         <tbody>
